tests/pass/fn_const_generic_simple.tk
fn foo<N_: usize>() -> usize {
    return N_;
}

fn main() -> i32 {
    auto x = foo<10>();
    if (x == 10) return 0;
    return 1;
}
