tests/fail/fail_missing_return.tk
fn missing_return(x: i32) -> i32 {
    if (x > 0) {
        return 1
    }
    // Error: Control reaches end of non-void function
}

fn main() -> i32 {
    return missing_return(0)
}
